--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h2>Paragraph</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis eum tempore, sunt hic iusto, quia eaque quam quidem reiciendis nam nobis, cupiditate temporibus dolorem doloribus sint maxime? Dolorem, exercitationem est!<p>
+        <section>
+            <img src="" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit vitae optio voluptates, non modi deserunt quod temporibus accusamus corrupti tempora earum aut quibusdam! Quidem sapiente magnam tenetur deleniti modi non.</p>
+        </section>
 </body>
 </html>
